# Vellum-Terminal

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  design.md
scripts/: check_deps.sh
src/: color_resolve.rs  config.rs  font.rs  gpu.rs  headless.rs  keymap.rs  lib.rs  main.rs  render.rs  shader.wgsl  snapshot.rs  terminal.rs  theme.rs
tests/: snapshot_tests.rs
